Closed Bug 1141642 Opened 8 years ago Closed 8 years ago

Firefox fails to build on PPC64: image_operations.h:32:26: fatal error: skia/SkTypes.h: No such file or directory

Categories

(Core :: Graphics: Color Management, defect)

PowerPC
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox38 --- fixed
firefox38.0.5 --- fixed
firefox39 --- fixed
firefox40 --- fixed
firefox-esr38 --- fixed

People

(Reporter: gustavold, Assigned: stevensn)

References

Details

(Whiteboard: [gfx-noted])

Attachments

(1 file)

Building Firefox (mozilla-central) on PPC64 fails with the following error messages:

 2:26.59 In file included from /home/buildbot/buildbot/slave/runtests/build/image/src/Downscaler.cpp:12:0,
 2:26.59                  from /home/buildbot/buildbot/slave/runtests/build/obj-powerpc64-unknown-linux-gnu/image/src/Unified_cpp_image_src0.cpp:29:
 2:26.59 /home/buildbot/buildbot/slave/runtests/build/gfx/2d/image_operations.h:32:26: fatal error: skia/SkTypes.h: No such file or directory


For the full build log see: http://mozillaproject.osuosl.org:8010/builders/runtests/builds/2684/steps/shell/logs/stdio
Severity: blocker → normal
Whiteboard: [gfx-noted]
See Also: → 1115523
Attached patch bug_114164.diffSplinter Review
This patch fixes the error by not building Downscaler.cpp on non-skia builds Downscaler.h already has a stub for non-skia builds.

This patch also includes a fix for a compile time error on the non-skia code path in the Compositor code.
Attachment #8594421 - Flags: review?(jmuizelaar)
Attachment #8594421 - Flags: review?(jmuizelaar) → review+
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/8268d3740f9d
Status: UNCONFIRMED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
Comment on attachment 8594421 [details] [diff] [review]
bug_114164.diff

Approval Request Comment
[Feature/regressing bug #]: Bug 1045929
[User impact if declined]: disable skia builds won't compile (many tier3 platforms won't build with skia enabled)
[Describe test coverage new/current, TreeHerder]: Tested on m-c
[Risks and why]: low risk, these changes are NPOTB-tier1
[String/UUID change made/needed]:
Attachment #8594421 - Flags: approval-mozilla-aurora?
Comment on attachment 8594421 [details] [diff] [review]
bug_114164.diff

Approved for aurora uplift since this looks stable on m-c.
Attachment #8594421 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Steve, just curious - do we define tier 1, 2, 3 platforms somewhere? Thanks.
Flags: needinfo?(steve)
Flags: needinfo?(steve)
Keywords: checkin-needed
checkin-needed isn't necessary on uplifts
Keywords: checkin-needed
Fwiw, will probably also need backport to beta - testing that the patch backported there fixes 38.0b9.
Comment on attachment 8594421 [details] [diff] [review]
bug_114164.diff

38.0b8 built fine on OpenBSD/powerpc with this backported, so would be nice to uplift there (and to m-r too!)

Approval Request Comment
[Feature/regressing bug #]: Bug 1045929
[User impact if declined]: disable skia builds won't compile (many tier3 platforms won't build with skia enabled)
[Describe test coverage new/current, TreeHerder]: Tested on m-c & m-a
[Risks and why]: low risk, these changes are NPOTB-tier1
[String/UUID change made/needed]: none
Attachment #8594421 - Flags: approval-mozilla-release?
Attachment #8594421 - Flags: approval-mozilla-beta?
Cameron, did you hit this for tenfourfox or is skia enabled/fixed there ?
Flags: needinfo?(spectre)
I'm sure I *will* hit it -- I haven't finished patching up 38ESR yet (Master's programs really suck away your hacking time). ETA is to jump from 31 to 38 around 38.0.2. If the existing patches I have don't fix this, I will incorporate yours into my changesets if this patch is not uplifted.
Flags: needinfo?(spectre)
Comment on attachment 8594421 [details] [diff] [review]
bug_114164.diff

If this lands before Sunday, it will make it in 38RC. Otherwise, it will have to wait for ESR.
Attachment #8594421 - Flags: approval-mozilla-release?
Attachment #8594421 - Flags: approval-mozilla-release+
Attachment #8594421 - Flags: approval-mozilla-beta?
You need to log in before you can comment on or make changes to this bug.