Bug 1141642 - Fix disable-skia builds. r=jmuizelaar, a=lizzard